force-app/main/default/objects/ssot__IndicatorPerformancePeriod__dlm/fields/ssot__BaselineValueNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__BaselineValueNumber__c</fullName>
    <label>Baseline Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BaselineValueNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>