force-app/main/default/objects/ssot__IndicatorPerformancePeriod__dlm/fields/ssot__LastMeasurementDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastMeasurementDate__c</fullName>
    <label>Last Measurement Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastMeasurementDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>