force-app/main/default/objects/ssot__IndicatorPerformancePeriod__dlm/fields/ssot__rel_1716726577119_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726577119_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IndicatorPerformancePeriod_TimePerio_rel</label>
    <referenceTo>ssot__TimePeriod__dlm</referenceTo>
    <relationshipLabel>IndicatorPerformancePeriod_TimePerio_rel</relationshipLabel>
    <relationshipName>rel_1716726577119_end</relationshipName>
    <type>Lookup</type>
</CustomField>