force-app/main/default/objects/ssot__IndicatorPerformancePeriod__dlm/fields/ssot__rel_1716726579877_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726579877_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IndicatorPerformancePeriod_Indicator_rel</label>
    <referenceTo>ssot__IndicatorAssignment__dlm</referenceTo>
    <relationshipLabel>IndicatorPerformancePeriod_Indicator_rel</relationshipLabel>
    <relationshipName>rel_1716726579877_end</relationshipName>
    <type>Lookup</type>
</CustomField>