force-app/main/default/objects/ssot__IndicatorPerformancePeriod__dlm/fields/ssot__TargetProgress__c.field-meta.xml
<CustomField>
    <fullName>ssot__TargetProgress__c</fullName>
    <label>Target Progress</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TargetProgress</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>