force-app/main/default/objects/ssot__IndicatorPerformancePeriod__dlm/fields/ssot__TimePeriodId__c.field-meta.xml
<CustomField>
    <fullName>ssot__TimePeriodId__c</fullName>
    <label>Time Period</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TimePeriodId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>